k8s/development/00-employee-namespaces.yaml
# +--------------------------------------------------
# | CREATE NAMESPACES FOR DEVELOP ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 09-01-2022
# +--------------------------------------------------

apiVersion: v1
kind: Namespace
metadata:
  name: ns-development
  labels:
    owner: taa
    env: dev
    type: configuration
    app: api-employees
