k8s/development/07-employee-deployment.yaml
# +--------------------------------------------------
# | CREATE DEPLOYMENT FOR DEVELOPMENT ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 10-01-2022
# +--------------------------------------------------

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dlt-api-employees
  namespace: ns-development
  labels:
    owner: taa
    env: dev
    type: application
    app: api-employees
spec:
  selector:
    matchLabels:
      owner: taa
      env: dev
      type: application
      app: api-employees
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  template:
    metadata:
      labels:
        owner: taa
        env: dev
        type: application
        app: api-employees
    spec:
      volumes:
        - name: vlm-dev-nfs-storage
          persistentVolumeClaim:
            claimName: pvc-development
      containers:
        - name: employee-services
          image: wortiz1027/employee-services:v1.0.0-20220110121740
          ports:
            - name: http
              containerPort: 8080
            - name: monitor
              containerPort: 9090
          imagePullPolicy: Always
          volumeMounts:
            - name: vlm-dev-nfs-storage
              path: "/employee/dev/data"
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "150Mi"
              cpu: "350m"
          readnessProbe:
            httpGet:
              path: /monitor/actuator/health/readiness
              port: 9090
              initialDelaySeconds: 60
              timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /monitor/actuator/health/liveness
              port: 9090
              initialDelaySeconds: 130
              timeoutSeconds: 10
              failureThreshold: 10
          startupProbe:
            httpGet:
              path: /ping
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
