k8s/development/02-employee-db-externalservice.yaml
# +---------------------------------------------------------------------
# | CREATE SERVICE CONNECT TO EXTERNAL MYSQL FOR DEVELOPMENT ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 09-01-2022
# +---------------------------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: svc-mysql-server-development
  namespace: ns-development
  labels:
    app: api-employees
    owner: taa
    env: dev
    type: configuration
spec:
  type: ExternalName
  ExternalName: developer-io
  ports:
    - name: db-development
      port: 33060
      targetPort: 33060
