k8s/development/08-employee-service.yaml
# +--------------------------------------------------
# | CREATE SERVICE FOR DEVELOPMENT ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 10-01-2022
# +--------------------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: svc-employee-services-development
  namespace: ns-development
  labels:
    owner: taa
    env: dev
    type: application
    app: api-employees
spec:
  selector:
    owner: taa
    env: dev
    type: application
    app: api-employees
  type: NodePort
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: http
      port: 9090
      targetPort: 9090
