k8s/development/10-employee-ingress.yaml
# +--------------------------------------------------
# | CREATE INGRESS FOR DEVELOPMENT ENVIRONMENT
# | AUTHOR: WORTIZ
# | DATE: 22-01-2022
# +--------------------------------------------------

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: igs-api-employee
  namespace: ns-development
  annotations:
    ingress.kubernetes.io/readwrite-target: /
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/name: employees
    app.kubernetes.io/instance: employees
    app.kubernetes.io/version: "1.0.5"
    app.kubernetes.io/component: microservice
    app.kubernetes.io/part-of: api-employee
    app.kubernetes.io/managed-by: github.com
    owner: taa
    env: dev
    type: application
    app: api-employees
spec:
  tls:
    - hosts:
        - developer.io
      secretName: sc-tls-api-employee
  rules:
    - host: developer.io
      http:
        paths:
          - pathType: Prefix
            path: /employees/api/v1
            backend:
              service:
                name: svc-employee-services-development
                port:
                  number: 8080
          - pathType: Prefix
            path: /monitor/actuator/health
            backend:
                service:
                  name: svc-employee-services-development
                  port:
                    number: 9090
